--- a/index.html
+++ b/index.html
@@ -39,11 +39,18 @@
         <script src="http://elm-in-action.com/pasta.js"></script>
         <script src="elm.js"></script>
         <script>
-          var app = Elm.PhotoGroove.init({node: document.getElementById("app")});
-         
-          app.ports.setFilters.subscribe(function(options) {
-            Pasta.apply(document.getElementById("main-canvas"), options);
-          });
+            var app = Elm.PhotoGroove.init({node: document.getElementById("app"), flags: Pasta.version});
+ 
+            app.ports.setFilters.subscribe(function(options) {
+                requestAnimationFrame(function() {
+                    Pasta.apply(document.getElementById("main-canvas"), options);
+                });
+            });
+            
+            Pasta.addActivityListener(function(activity) {
+                console.log("Got some activity to send to Elm:", activity);
+                app.ports.activityChanges.send(activity);
+            });
         </script>
     </body>
 </html>
